--- a/src/app/modules/fancy-button/fancy-button.component.html
+++ b/src/app/modules/fancy-button/fancy-button.component.html
@@ -1,4 +1,4 @@
 <ng-container *ngIf="checked()"></ng-container>
 <button type="button" (click)="loud()">
-  Fancy button
+  Fancy button {{ name }}
 </button>
