--- a/src/app/modules/combined-signal/combined-signal.component.html
+++ b/src/app/modules/combined-signal/combined-signal.component.html
@@ -1,19 +1,20 @@
+<ng-container *ngIf="checked()"></ng-container>
 <h1>
   Combined Signal
 </h1>
 <hr />
 <button
   type="button"
-  (click)="addOne()"
+  (click)="addOne($event)"
 >
   Add One
 </button>
-<input
+<!-- <input
   type="number"
   placeholder="Input value"
   [value]="input$()"
   (input)="updateValue($event)"
-/>
+/> -->
 <div>
   Sum: {{ sum$() }}
 </div>
